--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <title>Manoj</title>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Manoj Bharadhwaj</h1>
+<p>I'm Manoj Bharadhwaj, this is my blog!.</p>
 </body>
 </html>
