--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <title>Manoj</title>
+  <title>Manoj Bharadhwaj Blog</title>
 <body>
 <h1>Manoj Bharadhwaj</h1>
 <p>I'm Manoj Bharadhwaj, this is my blog!.</p>
