--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>Manoj Bharadhwaj Blog</title>
 <body>
 <h1>Manoj Bharadhwaj</h1>
-<p>I'm Manoj Bharadhwaj, this is my blog!.</p>
+<p>I'm Manoj Bharadhwaj, this is my blog! I'm a member of Open Source Club!.</p>
   <h3> Pardon the dust! </h3>
 </body>
 </html>
