--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <body>
 <h1>Manoj Bharadhwaj</h1>
 <p>I'm Manoj Bharadhwaj, this is my blog! I'm a member of Open Source Club!.</p>
-  <h3> Pardon the dust! </h3>
+  <h3> Pardon the dust! I'll get back soon. If you want to reach me out, feel free to email <mylastname>m<at>gmail<dot>com</h3>
 </body>
 </html>
