--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <body>
 <h1>Manoj Bharadhwaj</h1>
 <p>I'm Manoj Bharadhwaj, this is my blog!</p>
-  <h3> Pardon the dust! I'll get back soon. If you want to reach me out, feel free to email &lt; mylastname &gt; m &lt; at &gt; gmail &lt; dot &gt; com</h3>
+  <p> Pardon the dust! I'll get back soon. If you want to reach me out, feel free to email &lt;mylastname&gt;m&lt;at&gt;gmail&lt;dot&gt;com</p>
 </body>
 </html>
