--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <h1>Manoj Bharadhwaj</h1>
 <p>I'm Manoj Bharadhwaj, this is my blog!</p>
   <p> Pardon the dust! I'll get back soon. If you want to reach me out, feel free to email - &lt;mylastname&gt;m&lt;at&gt;gmail&lt;dot&gt;com</p>
+  <p> I am planning to start a blog, which will cover the basics of Machine Learning and the math behind it in Python. </p>
   </body>
 </html>
